# Flask-ASI-2021-Leszczynski

./: app.py  main.bak  main.py  mojlogger.py  passhasher.py  pogoda.py  powitania.txt  pyproject.toml  register.py  sqlite_db  tutorial.db
static/: style.css
templates/: bootstrap.html  frontpage.html  grades.html  logowanie.html  pogoda.html
