[tool.poetry]
name = "repl_python3_beta_Flask-simple"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.0"
flask = "^1.1.2"
sqlalchemy = "^1.4.11"
werkzeug = "^1.0.1"
click = "^8.0.1"
flask-login = "^0.5.0"
oauthlib = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
